--- a/index.html
+++ b/index.html
@@ -56,117 +56,105 @@
                         <h2>Hébergements à Marseille</h2>
                         <ul id="hebergements_block">
                             <li class="hebergements">
-                                <figure>
-                                    <a href="#">   
+                                <a href="#">  
                                     <img src="images/hebergements/auberge_la_cannebiere.jpg" alt="Photo de l'Auberge de la Cannebière" />
-                                    </a>
-                                </figure>
-                                <a href="#"> 
-                                 <figcaption>Auberge la Cannebière</figcaption>
-                                 <p>Nuit à partir de <span>25€</span></p>
-                                 <ul class="stars">
-                                        <li><i class="fa fa-star gold"></i></li>
-                                        <li><i class="fa fa-star gold"></i></li>
-                                        <li><i class="fa fa-star gold"></i></li>
-                                        <li><i class="fa fa-star gold"></i></li>
-                                        <li><i class="fa fa-star"></i></li>
-                                    </ul>
-                                </a>
+                                    <div class="hebergements_text">
+                                        <h4>Auberge la Cannebière</h4>
+                                        <p>Nuit à partir de <span>25€</span></p>
+                                        <ul class="stars">
+                                            <li><i class="fa fa-star gold"></i></li>
+                                            <li><i class="fa fa-star gold"></i></li>
+                                            <li><i class="fa fa-star gold"></i></li>
+                                            <li><i class="fa fa-star gold"></i></li>
+                                            <li><i class="fa fa-star"></i></li>
+                                        </ul>
+                                    </div>
+                                </a>           
                             </li>
 
                             <li class="hebergements">
-                                <figure>
-                                    <a href="#">   
+                                <a href="#">  
                                     <img src="images/hebergements/hotel_du_port.jpg" alt="Photo de l'Hôtel du port" />
-                                    </a>
-                                </figure>
-                                <a href="#"> 
-                                 <figcaption>Hôtel du port</figcaption>
-                                 <p>Nuit à partir de 52<span>€</span></p>
-                                 <ul class="stars">
-                                        <li><i class="fa fa-star gold"></i></li>
-                                        <li><i class="fa fa-star gold"></i></li>
-                                        <li><i class="fa fa-star gold"></i></li>
-                                        <li><i class="fa fa-star gold"></i></li>
-                                        <li><i class="fa fa-star gold"></i></li>
-                                    </ul>
-                                </a>
+                                    <div class="hebergements_text">
+                                        <h4>Hôtel du port</h4>
+                                        <p>Nuit à partir de 52<span>€</span></p>
+                                        <ul class="stars">
+                                            <li><i class="fa fa-star gold"></i></li>
+                                            <li><i class="fa fa-star gold"></i></li>
+                                            <li><i class="fa fa-star gold"></i></li>
+                                            <li><i class="fa fa-star gold"></i></li>
+                                            <li><i class="fa fa-star gold"></i></li>
+                                        </ul>
+                                    </div>
+                                </a>           
                             </li>
 
                             <li class="hebergements">
-                                <figure>
-                                    <a href="#">   
+                                <a href="#">  
                                     <img src="images/hebergements/hotel_les_mouettes.jpg" alt="Photo de l'Hôtel Les mouettes" />
-                                    </a>
-                                </figure>
-                                <a href="#"> 
-                                 <figcaption>Hôtel Les mouettes</figcaption>
-                                 <p>Nuit à partir de 76<span>€</span></p>
-                                 <ul class="stars">
-                                        <li><i class="fa fa-star gold"></i></li>
-                                        <li><i class="fa fa-star gold"></i></li>
-                                        <li><i class="fa fa-star gold"></i></li>
-                                        <li><i class="fa fa-star gold"></i></li>
-                                        <li><i class="fa fa-star"></i></li>
-                                    </ul>
-                                </a>
+                                    <div class="hebergements_text">
+                                        <h4>Hôtel Les mouettes</h4>
+                                        <p>Nuit à partir de 76<span>€</span></p>
+                                        <ul class="stars">
+                                            <li><i class="fa fa-star gold"></i></li>
+                                            <li><i class="fa fa-star gold"></i></li>
+                                            <li><i class="fa fa-star gold"></i></li>
+                                            <li><i class="fa fa-star gold"></i></li>
+                                            <li><i class="fa fa-star"></i></li>
+                                        </ul>
+                                    </div>
+                                </a>           
                             </li>
 
                             <li class="hebergements">
-                                <figure>
-                                    <a href="#">   
+                                <a href="#">  
                                     <img src="images/hebergements/hotel_de_la_mer.jpg" alt="Photo de l'Hôtel de la mer" />
-                                    </a>
-                                </figure>
-                                <a href="#"> 
-                                 <figcaption>Hôtel de la mer</figcaption>
-                                 <p>Nuit à partir de 46<span>€</span></p>
-                                 <ul class="stars">
-                                        <li><i class="fa fa-star gold"></i></li>
-                                        <li><i class="fa fa-star gold"></i></li>
-                                        <li><i class="fa fa-star gold"></i></li>
-                                        <li><i class="fa fa-star"></i></li>
-                                        <li><i class="fa fa-star"></i></li>
-                                    </ul>
-                                </a>
+                                    <div class="hebergements_text">
+                                        <h4>Hôtel de la mer</h4>
+                                        <p>Nuit à partir de 46<span>€</span></p>
+                                        <ul class="stars">
+                                            <li><i class="fa fa-star gold"></i></li>
+                                            <li><i class="fa fa-star gold"></i></li>
+                                            <li><i class="fa fa-star gold"></i></li>
+                                            <li><i class="fa fa-star"></i></li>
+                                            <li><i class="fa fa-star"></i></li>
+                                        </ul>
+                                    </div>
+                                </a>           
                             </li>
 
                             <li class="hebergements">
-                                <figure>
-                                    <a href="#">   
+                                <a href="#">  
                                     <img src="images/hebergements/auberge_le_panier.jpg" alt="Photo de l'Auberge Le Panier" />
-                                    </a>
-                                </figure>
-                                <a href="#"> 
-                                 <figcaption>Auberge Le Panier</figcaption>
-                                 <p>Nuit à partir de <span>23€</span></p>
-                                 <ul class="stars">
-                                        <li><i class="fa fa-star gold"></i></li>
-                                        <li><i class="fa fa-star gold"></i></li>
-                                        <li><i class="fa fa-star gold"></i></li>
-                                        <li><i class="fa fa-star gold"></i></li>
-                                        <li><i class="fa fa-star"></i></li>
-                                    </ul>
-                                </a>
+                                    <div class="hebergements_text">
+                                        <h4>Auberge Le Panier</h4>
+                                        <p>Nuit à partir de <span>23€</span></p>
+                                        <ul class="stars">
+                                            <li><i class="fa fa-star gold"></i></li>
+                                            <li><i class="fa fa-star gold"></i></li>
+                                            <li><i class="fa fa-star gold"></i></li>
+                                            <li><i class="fa fa-star gold"></i></li>
+                                            <li><i class="fa fa-star"></i></li>
+                                        </ul>
+                                    </div>
+                                </a>           
                             </li>
 
                             <li class="hebergements">
-                                <figure>
-                                    <a href="#">   
+                                <a href="#">  
                                     <img src="images/hebergements/hotel_chez_amina.jpg" alt="Photo de l'Hôtel chez Amina" />
-                                    </a>
-                                </figure>
-                                <a href="#"> 
-                                 <figcaption>Hôtel chez Amina</figcaption>
-                                 <p>Nuit à partir de 96<span>€</span></p>
-                                 <ul class="stars">
-                                        <li><i class="fa fa-star gold"></i></li>
-                                        <li><i class="fa fa-star gold"></i></li>
-                                        <li><i class="fa fa-star gold"></i></li>
-                                        <li><i class="fa fa-star gold"></i></li>
-                                        <li><i class="fa fa-star gold"></i></li>
-                                    </ul>
-                                </a>
+                                    <div class="hebergements_text">
+                                        <h4>Hôtel chez Amina</h4>
+                                        <p>Nuit à partir de 96<span>€</span></p>
+                                        <ul class="stars">
+                                            <li><i class="fa fa-star gold"></i></li>
+                                            <li><i class="fa fa-star gold"></i></li>
+                                            <li><i class="fa fa-star gold"></i></li>
+                                            <li><i class="fa fa-star gold"></i></li>
+                                            <li><i class="fa fa-star gold"></i></li>
+                                        </ul>
+                                    </div>
+                                </a>           
                             </li>
                         </ul>
                         <a href="#"><h4>Afficher plus</h4></a>
